# rusty-deploy

./: .gitignore  README.md  setup.sh
OnnxDemo/src/: lib.rs
onnx-efs-lambda/src/: main.rs
rtorchdist/: CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  check_pytorch.cpp  convertdl.py  install.sh  predict.sh  requirements.txt  smoke_test_routes.sh  sync-models.sh  verify.py
rtorchdist/src/: cerror.rs  lib.rs  logic.rs  main.rs  routes.rs
rtorchdist/src/routes/: check_image_prediction.rs  check_image_upload.rs  check_pytorch_cpu.rs  index.rs  mod.rs
rtorchdist/tests/: model_tests.rs  vision_tests.rs  web_tests.rs
