[package]
name = "rtorchdist"
version = "0.1.0"
edition = "2018"

[dependencies]
tch = "0.11.0"
actix-web = "4.0.0-beta.11"
actix-multipart = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.6"
env_logger = "0.10.0"
futures = "0.3.28"
bytemuck = "1.7.2"
imageproc = "0.23.0"
mime = "0.3.16"
failure = "0.1.8"


[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"